Image Invisible Fix

--- a/tetris/style.css
+++ b/tetris/style.css
@@ -1,7 +1,7 @@
 /* Page layout */
 body {
   margin: 0;
-  background-image: url("images/packdotpng.jpg");
+  background-image: url("..images/packdotpng.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
